# aow

./: .gitignore  Cargo.toml  README.md  author-notes.txt
.github/workflows/: cd.yml  choco.yml  ci.yml  release.yml
choco/: aow.nuspec  publish.txt
choco/tools/: LICENSE.txt  VERIFICATION.txt
src/: main.rs
src/back/: command.rs  config.rs  connect.rs  device.rs  dialog.rs  mod.rs  update.rs
