[package]
name = "aow"
description = "A command line tool for adb to connect devices over wifi"
version = "0.1.3"
authors = ["Kaustubh Patange <developerkp16@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"

[package.metadata.deb]
extended-description = """\
Adb Over Wifi (aow) is a command line tool for adb to connect devices over wifi. \
"""
depends = "$auto"
section = "utility"
priority = "optional"

[dependencies]
regex = "1"
wait-timeout = "0.2.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"